--- a/知识图谱/papers/知识校验.md
+++ b/知识图谱/papers/知识校验.md
@@ -1,1 +1,1 @@
-Jiaoyan Chen, Ernesto Jimenez-Ruiz, Ian Horrocks. Canonicalizing Knowledge Base Literals. International Semantic Web Conference (ISWC), 2019.[[pdf]](https://arxiv.org/pdf/2001.06917.pdf)
+Jiaoyan Chen, Ernesto Jimenez-Ruiz, Ian Horrocks. Canonicalizing Knowledge Base Literals. International Semantic Web Conference (ISWC), 2019.[[pdf]](https://arxiv.org/pdf/2001.06917.pdf) [[code]](https://github.com/ChenJiaoyan/KG_Curation)
